fixed dropdown not showing up

--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -51,6 +51,7 @@
   display: flex;
   align-items: center;
   width: 70%;
+  position: relative;
 }
 
 .custom-input-wrapper input {
